# snake_kata

./: .gitignore  CMakeLists.txt  Config.h  ConsoleDisplay.cpp  ConsoleDisplay.h  ConsoleInputDevice.cpp  ConsoleInputDevice.h  Display.cpp  Display.h  InputDevice.h  Position.cpp  Position.h  Snake.cpp  Snake.h  SnakeEngine.cpp  SnakeEngine.h  TestCases.cpp  main.cpp
